* Started mini-documentation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<html>
-<head>
-<title>Broken Hill Surf Shop Online</title>
-</head>
-<body>
-</body>
-</html>
+<!DOCTYPE html> <!--Tells the browser that this HTML document is using HTML 5-->
+<html> <!--Tells the browser that this is a HTML document-->
+<head> <!--Contains all head elements-->
+<title>Broken Hill Surf Shop Online</title> <!--Set the title of the HTML document-->
+</head> <!--HTML tag pair-->
+<body> <!--Contains all body elements-->
+</body> <!--HTML tag pair-->
+</html> <!--HTML tag pair-->
