--- a/index.html
+++ b/index.html
@@ -1,8 +1,79 @@
-<!DOCTYPE html> <!--Tells the browser that this HTML document is using HTML 5-->
-<html> <!--Tells the browser that this is a HTML document-->
-<head> <!--Contains all head elements-->
-<title>Broken Hill Surf Shop Online</title> <!--Set the title of the HTML document-->
-</head> <!--HTML tag pair-->
-<body> <!--Contains all body elements-->
-</body> <!--HTML tag pair-->
-</html> <!--HTML tag pair-->
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <title>Broken Hill Surf Shop Online</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!--jQuery -->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript" ></script>
+    <!--
+      Nivo Slider
+      http://docs.dev7studios.com/jquery-plugins/nivo-slider
+      -->
+    <link rel="stylesheet" href="assets/css/nivo-slider.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/nivo-slider-theme.css" type="text/css" />
+    <script src="assets/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(window).load(function() {
+          $('#slider').nivoSlider({
+      controlNav: false,
+      pauseOnHover: true,
+      pauseTime: 8000});
+      });
+    </script>
+  </head>
+  <body>
+    <!--Header (Logo) and Navigation Bar-->
+    <div id="header">
+      <img src="assets/images/logo.png" width="300" height="81" alt="Broken Hill Surf Shop Logo">
+    </div>
+    <div id="navigation-bar" class="content">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#news">News</a></li>
+      </ul>
+    </div>
+    <!--Nivo Slider-->
+    <div class="slider-wrapper ribbon">
+      <div id="slider" class="nivoSlider">
+        <img src="assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
+        <img src="assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/>
+        <img src="assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/>
+        <img src="assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
+        <img src="assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> 
+      </div>
+      <div id="htmlcaption" class="nivo-html-caption">
+        <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
+      </div>
+    </div>
+    <div id="footer">
+    </div>
+  </body>
+</html>
