--- a/index.html
+++ b/index.html
@@ -40,40 +40,101 @@
     <script src="assets/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
     <script type="text/javascript">
       $(window).load(function() {
-          $('#slider').nivoSlider({
-      controlNav: false,
-      pauseOnHover: true,
-      pauseTime: 8000});
-      });
+        $('#slider').nivoSlider(
+      {
+            controlNav: false,
+            pauseOnHover: true,
+            pauseTime: 8000});
+          }
+      );
     </script>
   </head>
   <body>
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
-      <img src="assets/images/logo.png" width="300" height="81" alt="Broken Hill Surf Shop Logo">
+      <header class="content">
+        <a href="/"><img src="assets/images/logo.png" width="300" height="81" alt="Broken Hill Surf Shop Logo"></a>
+        <!--START Navigation Bar-->
+        <div id="navigation-bar">
+          <ul>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="last"><a href="#news">News</a></li>
+          </ul>
+        </div>
+        <!--END Navigation Bar-->
+      </header>
     </div>
-    <div id="navigation-bar" class="content">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#news">News</a></li>
-      </ul>
-    </div>
-    <!--Nivo Slider-->
-    <div class="slider-wrapper ribbon">
-      <div id="slider" class="nivoSlider">
-        <img src="assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
-        <img src="assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/>
-        <img src="assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/>
-        <img src="assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
-        <img src="assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> 
+    <div id="body">
+      <!--START Nivo Slider-->
+      <div class="slider-wrapper ribbon">
+        <div id="slider" class="nivoSlider">
+          <img src="assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
+          <img src="assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/>
+          <img src="assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/>
+          <img src="assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
+          <img src="assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> 
+        </div>
+        <div id="htmlcaption" class="nivo-html-caption">
+          <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
+        </div>
       </div>
-      <div id="htmlcaption" class="nivo-html-caption">
-        <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
-      </div>
+      <!--END Nivo Slider-->
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
     <div id="footer">
+      <footer>
+        this is the footer
+      </footer>
     </div>
   </body>
 </html>
