* Fixed html href to work on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
       <header class="content">
-        <a href="/"><img src="assets/images/logo.png" width="300" height="81" alt="Broken Hill Surf Shop Logo"></a>
+        <a href="index.html"><img src="assets/images/logo.png" width="300" height="81" alt="Broken Hill Surf Shop Logo"></a>
         <!--START Navigation Bar-->
         <div id="navigation-bar">
           <ul>
-            <li class="active"><a href="/">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="last"><a href="#news">News</a></li>
