+ Started on HTML arguments for the product page. idk... + 404 page because yolo + favicon.ico -> Well that took time * I'm having way too much fun on a school assessment. It's unhealthy

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <body>
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
-      <header class="content">
-        <a href="index.html"><img src="assets/images/logo.png" width="300" height="81" alt="Broken Hill Surf Shop Logo"></a>
+      <header class="header">
+        <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a>
         <!--START Navigation Bar-->
         <div id="navigation-bar">
           <ul>
@@ -66,7 +66,8 @@
         <!--END Navigation Bar-->
       </header>
     </div>
-    <div id="body">
+    <div id="content">
+      text
       <!--START Nivo Slider-->
       <div class="slider-wrapper ribbon">
         <div id="slider" class="nivoSlider">
