--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
       <header class="header">
-        <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a>
+        <a href="404.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a>
         <!--START Navigation Bar-->
         <div id="navigation-bar">
           <ul>
