* Remove test stuff * Code formatting?

--- a/404.html
+++ b/404.html
@@ -9,8 +9,8 @@
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
       <header class="header">
-        <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"></a>
-        <!--START Navigation Bar-->
+        <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"></a> 
+        <!--START Navigation Bar--> 
         <!--Well on this page it isn't a navigation bar -->
         <div id="navigation-bar">
           <ul>
@@ -20,22 +20,20 @@
             <li class="last"><a>Do</a></li>
           </ul>
         </div>
-        <!--END Navigation Bar-->
+        <!--END Navigation Bar--> 
       </header>
     </div>
     <div id="content">
       <div id="four_oh_four" class="four_oh_four">
-      <hr>
-      <p><a href="index.html">
-        Return to the homepage</a></p>
+        <hr>
+        <p><a href="index.html"> Return to the homepage</a></p>
         <script type="text/javascript">
-		if (document.referrer != "") {
-			document.write('<a href="javascript:history.back()">Click here to go back</a>');
-			
-		}
-		</script>
-
-</div>
+          if (document.referrer != "") {
+          	document.write('<a href="javascript:history.back()">Click here to go back</a>');
+          	
+          }
+        </script> 
+      </div>
     </div>
   </body>
 </html>
