--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
       <header class="header">
-        <a href="404.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a>
+        <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a> 
         <!--START Navigation Bar-->
         <div id="navigation-bar">
           <ul>
@@ -63,25 +63,16 @@
             <li class="last"><a href="#news">News</a></li>
           </ul>
         </div>
-        <!--END Navigation Bar-->
+        <!--END Navigation Bar--> 
       </header>
     </div>
     <div id="content">
-      text
       <!--START Nivo Slider-->
       <div class="slider-wrapper ribbon">
-        <div id="slider" class="nivoSlider">
-          <img src="assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
-          <img src="assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/>
-          <img src="assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/>
-          <img src="assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
-          <img src="assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> 
-        </div>
-        <div id="htmlcaption" class="nivo-html-caption">
-          <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
-        </div>
+        <div id="slider" class="nivoSlider"> <img src="assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" /> <img src="assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/> <img src="assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/> <img src="assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" /> <img src="assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> </div>
+        <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. </div>
       </div>
-      <!--END Nivo Slider-->
+      <!--END Nivo Slider--> 
       <br>
       <br>
       <br>
@@ -133,9 +124,7 @@
       <br>
     </div>
     <div id="footer">
-      <footer>
-        this is the footer
-      </footer>
+      <footer> this is the footer </footer>
     </div>
   </body>
 </html>
