--- a/site/products.html
+++ b/site/products.html
@@ -37,7 +37,7 @@
           document.write('<img src="../assets/products/'+parameters[0]+'/product.png" alt="Product Image" />');
           document.write(parameters[0]);
           
-          jQuery.get('http://bearbear12345.github.io/school_ipt_as3/assets/products/'+parameters[0]+'/info.txt', function(data) { document.write(data);});
+          jQuery.get('http://bearbear12345.github.io/school_ipt_as3/assets/products/'+parameters[0]+'/info.txt', function(data) { document.writeln(data);});
         </script> 
       </h1>
     </div>
