* House Cleaning * Wrapper Page

--- a/site/404.html
+++ b/site/404.html
@@ -3,13 +3,13 @@
   <head>
     <title>Broken Hill Surf Shop Online</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
   </head>
   <body>
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
       <header class="header">
-        <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"></a> 
+        <a href="home.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"></a> 
         <!--START Navigation Bar--> 
         <!--Well on this page it isn't a navigation bar -->
         <div id="navigation-bar">
@@ -26,7 +26,7 @@
     <div id="content">
       <div id="four_oh_four" class="four_oh_four">
         <hr>
-        <p><a href="index.html"> Return to the homepage</a></p>
+        <p><a href="home.html"> Return to the homepage</a></p>
         <script type="text/javascript">
           if (document.referrer != "") {
           	document.write('<a href="javascript:history.back()">Click here to go back</a>');
