--- a/index.html
+++ b/index.html
@@ -1,130 +1,15 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <title>Broken Hill Surf Shop Online</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!--jQuery -->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript" ></script>
-    <!--
-      Nivo Slider
-      http://docs.dev7studios.com/jquery-plugins/nivo-slider
-      -->
-    <link rel="stylesheet" href="assets/css/nivo-slider.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/nivo-slider-theme.css" type="text/css" />
-    <script src="assets/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      $(window).load(function() {
-        $('#slider').nivoSlider(
-      {
-            controlNav: false,
-            pauseOnHover: true,
-            pauseTime: 8000});
-          }
-      );
-    </script>
-  </head>
-  <body>
-    <!--Header (Logo) and Navigation Bar-->
-    <div id="header">
-      <header class="header">
-        <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a> 
-        <!--START Navigation Bar-->
-        <div id="navigation-bar">
-          <ul>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="last"><a href="#news">News</a></li>
-          </ul>
-        </div>
-        <!--END Navigation Bar--> 
-      </header>
-    </div>
-    <div id="content">
-      <!--START Nivo Slider-->
-      <div class="slider-wrapper ribbon">
-        <div id="slider" class="nivoSlider"> <img src="assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" /> <img src="assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/> <img src="assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/> <img src="assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" /> <img src="assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> </div>
-        <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. </div>
-      </div>
-      <!--END Nivo Slider--> 
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
-    <div id="footer">
-      <footer> this is the footer </footer>
-    </div>
-  </body>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Broken Hill Surf Shop Online</title>
+<!-- Javascript code aka load database could go here! -->
+</head>
+
+<body style="margin: 0">
+<script type="application/javascript">//window.location.replace('site/badbrowser.html');</script>
+<iframe style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%" src="site/home.html"></iframe>
+</body>
 </html>
