--- a/site/products.html
+++ b/site/products.html
@@ -18,11 +18,11 @@
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
       <header class="header">
-        <a href="index.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"/></a> 
+        <a href="home.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"/></a> 
         <!--START Navigation Bar-->
         <div id="navigation-bar">
           <ul>
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="home.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="last"><a href="#news">News</a></li>
