UPDATED FOR CREDIT CARD OPTIONS*

--- a/IPT Buy Products Page - Draft.html
+++ b/IPT Buy Products Page - Draft.html
@@ -104,6 +104,16 @@
 <br>
 <br>
 
+<select>
+  <option select disabled>Select Option</option>
+  <option value=“Mastercard“>Mastercard</option>
+  <option value=“AMEX”>AMEX</option>
+  <option value=“VISA”>VISA</option>
+</select>
+
+<br>
+<br>
+
 <fieldset><legend> Credit Card Number</legend>
 <p align=“centre”> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=““ value=""></p>
 </fieldset>
