--- a/site/badbrowser.html
+++ b/site/badbrowser.html
@@ -2,12 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
+<link href='http://fonts.googleapis.com/css?family=Lato:400italic' rel='stylesheet' type='text/css'>
+<title>Oh No! Your browser!</title>
 </head>
-
-<body style="background-color:#069; margin: 0">
+<body style="background-color:#069; margin: 0; font-family: 'Lato', sans-serif;">
 <div style="text-align:center">
-test
-</div>
+<h1>Oh No! Your browser!</h1>
+<hr />
+You are using an outdated web browser. Please upgrade your web browser to continue browsing Broken Hill Surf Shop</div>
 </body>
+<footer>
+
+</footer>
 </html>
