--- a/IPT Buy Products Page - Draft.html
+++ b/IPT Buy Products Page - Draft.html
@@ -42,14 +42,14 @@
         <div id="navigation-bar">
           <ul>
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href=“#”>Surfing</a></li>
-	    <li><a href=“#”>Scuba Gear</a></li>
-	    <li><a href=“#”>Snorkeling Gear</a></li>
-	    <li><a href=“#”>Recreation</a></li>
-	    <li><a href=“#”>Water Recreation</a></li>
-	    <li><a href=“#”>Clothing</a></li>
-	    <li><a href=“#”>Accessories</a></li>
-	    <li><a href=“#”>Protection</a></li>
+            <li><a href="#">Surfing</a></li>
+	    <li><a href="#">Scuba Gear</a></li>
+	    <li><a href="#">Snorkeling Gear</a></li>
+	    <li><a href="#">Recreation</a></li>
+	    <li><a href="#">Water Recreation</a></li>
+	    <li><a href="#">Clothing</a></li>
+	    <li><a href="#">Accessories</a></li>
+	    <li><a href="#">Protection</a></li>
           </ul>
         </div>
         <!--END Navigation Bar-->
@@ -64,87 +64,87 @@
       <br>
       <br>
 <div id="menu" style="height:900px;width:467px;border:1px solid black;float:left;">
-<font face="Arial" font size=“5”>Product Details</font>
+<font face="Arial" font size="5">Product Details</font>
 <br>
 <br>
 <p>
 <font face="Arial">Quantity: 3 &nbsp&nbsp&nbsp&nbsp&nbsp Item Name: Midlength &nbsp&nbsp&nbsp&nbsp&nbsp Price: $419 </font>
 <br>
-<img src=“assets/images/Products/midlength.png”>
+<img src="assets/images/Products/midlength.png">
 </form>
 </div>
 
 <div id="menu" style="height:900px;width:467px;border:1px solid black;float:left;">
-<font face="Arial" font size=“5”>Customer Details</font>
+<font face="Arial" font size="5">Customer Details</font>
 
 <br>
 <br>
 <p>
 <form action="demo_form.asp">
 <fieldset><legend>Phone number</legend>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Last Name: <input type="text" name=“Last Name“ value=""></p>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp First Name: <input type="text" name=“First Name“ value=""></p>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Address: <input type="text" name=“Address“ value=""></p>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Postcode: <input type=“text” name=“Postcode“ value=""></p>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp City: <input type="text" name=“City“ value=""></p>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Country: <input type="text" name=“Country“ value=""></p>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Phone Number: <input type="text" name=“Phone Number“ value=""></p>
-<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Email: <input type="text" name=“Email“ value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Last Name: <input type="text" name="Last Name" value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp First Name: <input type="text" name="First Name" value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Address: <input type="text" name="Address" value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Postcode: <input type="text" name="Postcode" value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp City: <input type="text" name="City" value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Country: <input type="text" name="Country" value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Phone Number: <input type="text" name="Phone Number" value=""></p>
+<p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Email: <input type="text" name="Email" value=""></p>
 </div>
 
 <div id="menu" style="height:900px;width:467px;border:1px solid black;float:left;">
-<font face="Arial" font size=“5”>Payment Method</font>
+<font face="Arial" font size="5">Payment Method</font>
 <br>
 <br>
 <select>
   <option select disabled>Select Option</option>
-  <option value=“Credit Card“>Credit Card</option>
-  <option value=“PayPal”>PayPal</option>
+  <option value="Credit Card">Credit Card</option>
+  <option value="PayPal">PayPal</option>
 </select>
 <br>
 <br>
 
 <select>
   <option select disabled>Select Option</option>
-  <option value=“Mastercard“>Mastercard</option>
-  <option value=“AMEX”>AMEX</option>
-  <option value=“VISA”>VISA</option>
+  <option value="Mastercard">Mastercard</option>
+  <option value="AMEX">AMEX</option>
+  <option value="VISA">VISA</option>
 </select>
 
 <br>
 <br>
 
 <fieldset><legend> Credit Card Number</legend>
-<p align=“centre”> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=““ value=""></p>
+<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name="" value=""></p>
 </fieldset>
 
 <br>
 
 <fieldset><legend> Credit Card Owner</legend>
-<p align=“centre”> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=““value=""></p>
+<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
 </fieldset>
 
 <br>
 
-<fieldset style="width:180px" align=“left” ><legend> Credit Card Expire Month</legend>
-<p align=“centre”> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=““value=""></p>
+<fieldset style="width:180px" align="left" ><legend> Credit Card Expire Month</legend>
+<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
 </fieldset>
 
 <br>
 
-<fieldset style="width:180px" align=“left”><legend> Credit Card Expire Month</legend>
-<p align=“centre”> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=““value=""></p>
+<fieldset style="width:180px" align="left"><legend> Credit Card Expire Month</legend>
+<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
 </fieldset>
 
 <br>
 
-<fieldset style="width:180px" align=“left”><legend> CVC</legend>
-<p align=“centre”> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=““value=""></p>
+<fieldset style="width:180px" align="left"><legend> CVC</legend>
+<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
 </fieldset>
 <br>
 <br>
 
-<input type="button" onclick=“Buy” value=Buy>
+<input type="button" onclick="Buy" value=Buy>
 
 </div>
 
