made a few image changes to the HTML. Did nothing to the database*

--- a/IPT Buy Products Page - Draft.html
+++ b/IPT Buy Products Page - Draft.html
@@ -70,7 +70,9 @@
 <p>
 <font face="Arial">Quantity: 3 &nbsp&nbsp&nbsp&nbsp&nbsp Item Name: Midlength &nbsp&nbsp&nbsp&nbsp&nbsp Price: $419 </font>
 <br>
-<img src="assets/images/Products/midlength.png">
+<br>
+<br>
+<img src="assets/images/Products/midlength.png" alt="Midlength" height="582" width"290">
 </form>
 </div>
 
@@ -126,23 +128,27 @@
 
 <br>
 
-<fieldset style="width:180px" align="left" ><legend> Credit Card Expire Month</legend>
-<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
+<style type="text/css">
+  fieldset.inline {
+    display: inline;
+  }
+</style>
+
+<fieldset class="inline" 
+<fieldset style="width:180px" align="left"><legend> Credit Card Expire Year</legend> 
+<input type="text" name=""value=""></p>
 </fieldset>
 
-<br>
-
-<fieldset style="width:180px" align="left"><legend> Credit Card Expire Month</legend>
-<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
-</fieldset>
-
-<br>
-
-<fieldset style="width:180px" align="left"><legend> CVC</legend>
-<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
+<fieldset class="inline" 
+<fieldset style="width:180px" align="left"><legend> Credit Card Expire Month</legend> 
+<input type="text" name=""value=""></p>
 </fieldset>
 <br>
 <br>
+
+<fieldset><legend> CVC </legend>
+<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
+</fieldset>
 
 <input type="button" onclick="Buy" value=Buy>
 
