removed fieldset borders*

--- a/IPT Buy Products Page - Draft.html
+++ b/IPT Buy Products Page - Draft.html
@@ -63,7 +63,7 @@
       <br>
       <br>
       <br>
-<div id="menu" style="height:900px;width:467px;border:1px solid black;float:left;">
+<div id="menu" style="height:900px;width:467px;border:none; solid black;float:left;">
 <font face="Arial" font size="5">Product Details</font>
 <br>
 <br>
@@ -76,7 +76,7 @@
 </form>
 </div>
 
-<div id="menu" style="height:900px;width:467px;border:1px solid black;float:left;">
+<div id="menu" style="height:900px;width:467px;border:none; solid black;float:left;">
 <font face="Arial" font size="5">Customer Details</font>
 
 <br>
@@ -94,7 +94,7 @@
 <p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Email: <input type="text" name="Email" value=""></p>
 </div>
 
-<div id="menu" style="height:900px;width:467px;border:1px solid black;float:left;">
+<div id="menu" style="height:900px;width:467px;border:none; solid black;float:left;">
 <font face="Arial" font size="5">Payment Method</font>
 <br>
 <br>
@@ -116,14 +116,14 @@
 <br>
 <br>
 
-<fieldset><legend> Credit Card Number</legend>
-<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name="" value=""></p>
+<fieldset style=border:none;><legend>Credit Card Number</legend>
+<p align="centre"><input type="text" name="" value=""></p>
 </fieldset>
 
 <br>
 
-<fieldset><legend> Credit Card Owner</legend>
-<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
+<fieldset style=border:none;><legend> Credit Card Owner</legend>
+<p align="centre"><input type="text" name=""value=""></p>
 </fieldset>
 
 <br>
@@ -135,19 +135,19 @@
 </style>
 
 <fieldset class="inline" 
-<fieldset style="width:180px" align="left"><legend> Credit Card Expire Year</legend> 
+<fieldset style="width:199px" align="centre" border:#FFFFFF solid white;><legend> Credit Card Expire Year</legend> 
 <input type="text" name=""value=""></p>
 </fieldset>
 
 <fieldset class="inline" 
-<fieldset style="width:180px" align="left"><legend> Credit Card Expire Month</legend> 
+<fieldset style="width:199px" align="centre" border:#FFFFFF;><legend> Credit Card Expire Month</legend> 
 <input type="text" name=""value=""></p>
 </fieldset>
 <br>
 <br>
 
-<fieldset><legend> CVC </legend>
-<p align="centre"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <input type="text" name=""value=""></p>
+<fieldset style= border:none><legend> CVC </legend>
+<p align="centre"><input type="text" name=""value=""></p>
 </fieldset>
 
 <input type="button" onclick="Buy" value=Buy>
