* Bad browser page -> Will merge with noscript tag

--- a/site/badbrowser.html
+++ b/site/badbrowser.html
@@ -3,13 +3,20 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href='http://fonts.googleapis.com/css?family=Lato:400italic' rel='stylesheet' type='text/css'>
-<title>Oh No! Your browser!</title>
+<title>Oh No! Your Browser!</title>
 </head>
-<body style="background-color:#069; margin: 0; font-family: 'Lato', sans-serif;">
+<body style="background-color:#069; margin: 0; font-family: 'Lato', sans-serif; color: #77787A; font-size: 36px">
 <div style="text-align:center">
-<h1>Oh No! Your browser!</h1>
-<hr />
-You are using an outdated web browser. Please upgrade your web browser to continue browsing Broken Hill Surf Shop</div>
+<h1>Oh No! Your Browser!</h1>
+<hr style="color: #77787A" />
+<p style="font-size: 24px;">You are using an outdated web browser. <br />
+Please upgrade your web browser to continue browsing Broken Hill Surf Shop.</p>
+
+<p style="font-size: 72px">Consider using</p>
+<a href="http://www.mozilla.org/firefox/"><img src="../assets/images/badbrowser_assets/firefox.png" height="150" alt="Mozilla Firefox logo" /></a></p>
+<p><a href="http://www.google.com/chrome"><img src="../assets/images/badbrowser_assets/chrome.png" height="150" alt="Google Chrome logo" /></a></p>
+
+</div>
 </body>
 <footer>
 
