--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="shortcut icon" href="assets/images/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="shortcut icon" href="assets/images/favicon.ico" />
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Broken Hill Surf Shop Online</title>
 <!-- Javascript code aka load database could go here! -->
 </head>
 
 <body style="margin: 0">
-<script type="application/javascript">//window.location.replace('site/badbrowser.html');</script>
-<iframe style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%" src="site/home.html"></iframe>
+<noscript>
+<style type="text/css">
+        .container {display:none}
+</style>
+<div style="text-align:center; background-color:#CCC; margin: 0; font-family: 'Lato', sans-serif; color: #77787A; font-size: 36px; position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%">
+  <h1>JavaScript is disabled!</h1>
+  <hr color="#77787A" />
+  <p style="font-size: 24px;">JavaScript is required to browse Broken Hill Surf Shop.<br />
+    Please enable JavaScript to continue!</p>
+  <p>If you do not know how to enable JavaScript, please <a href="http://www.enable-javascript.com/" target="_blank">click here</a>.</p>
+</div>
+</noscript>
+<div class="container"> 
+  <script type="application/javascript">//window.location.replace('site/badbrowser.html');</script>
+  <iframe style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%" src="site/home.html">
+  <div style="text-align:center; background-color:#CCC; margin: 0; font-family: 'Lato', sans-serif; color: #77787A; font-size: 36px; position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%">
+    <h1>Oh No! Your Browser!</h1>
+    <hr color="#77787A" />
+    <p style="font-size: 24px;">You are using an outdated web browser. <br />
+      Please upgrade your web browser to continue browsing Broken Hill Surf Shop.</p>
+    <p style="font-size: 72px">Consider using</p>
+    <a href="http://www.mozilla.org/firefox/"><img src="assets/images/badbrowser_assets/firefox.png" height="150" alt="Mozilla Firefox logo" /></a>
+    </p>
+    <p><a href="http://www.google.com/chrome"><img src="assets/images/badbrowser_assets/chrome.png" height="150" alt="Google Chrome logo" /></a></p>
+  </div>
+  </iframe>
+</div>
 </body>
 </html>
