--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 <link rel="shortcut icon" href="assets/images/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Broken Hill Surf Shop Online</title>
 <!-- Javascript code aka load database could go here! -->
@@ -13,7 +13,7 @@
 <style type="text/css">
         .container {display:none}
 </style>
-<div style="text-align:center; background-color:#CCC; margin: 0; font-family: 'Lato', sans-serif; color: #77787A; font-size: 36px; position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%">
+<div style="text-align:center; background-color:#CCC; margin: 0; font-family: 'Lato', sans-serif; color: #77787A; font-size: 36px; position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%" >
   <h1>JavaScript is disabled!</h1>
   <hr color="#77787A" />
   <p style="font-size: 24px;">JavaScript is required to browse Broken Hill Surf Shop.<br />
@@ -21,8 +21,7 @@
   <p>If you do not know how to enable JavaScript, please <a href="http://www.enable-javascript.com/" target="_blank">click here</a>.</p>
 </div>
 </noscript>
-<div class="container"> 
-  <script type="application/javascript">//window.location.replace('site/badbrowser.html');</script>
+<div class="container">
   <iframe style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%" src="site/home.html">
   <div style="text-align:center; background-color:#CCC; margin: 0; font-family: 'Lato', sans-serif; color: #77787A; font-size: 36px; position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 0; width: 100%; height: 100%">
     <h1>Oh No! Your Browser!</h1>
