--- a/site/home.html
+++ b/site/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta charset="utf-8">
     <title>Broken Hill Surf Shop Online</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <!--jQuery -->
@@ -52,12 +52,13 @@
   <body>
     <!--Header (Logo) and Navigation Bar-->
     <div id="header">
-      <header class="header">
+      <header class="header headergradient">
         <a href="home.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a> 
         <!--START Navigation Bar-->
         <div id="navigation-bar">
           <ul>
             <li class="active"><a href="home.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="last"><a href="#news">News</a></li>
