--- a/site/products.html
+++ b/site/products.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript" ></script>
+    <meta charset="utf-8">
     <title>Broken Hill Surf Shop Online</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <!-- -->
     <script type="text/javascript">
       // Get page parameters - Andrew
       // Place in header
@@ -15,31 +13,47 @@
     </script>
   </head>
   <body>
-    <!--Header (Logo) and Navigation Bar-->
+<!--Header (Logo) and Navigation Bar-->
     <div id="header">
       <header class="header">
-        <a href="home.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"/></a> 
-        <!--START Navigation Bar-->
-        <div id="navigation-bar">
+        <div class="headergradient">
+          <a href="home.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"/></a> 
+<!--START Navigation Bar-->
+          <div id="navigation-bar">
+            <ul>
+              <li><a href="home.html">Home</a></li>
+              <li class="active"><a href="#products">Products</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li class="last"><a href="#news">News</a></li>
+            </ul>
+          </div>
+        </div>
+<!--END Navigation Bar--> 
+<!--START Product Navigation Bar-->
+        <div id="product-navigation-bar">
           <ul>
-            <li class="active"><a href="home.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="last"><a href="#news">News</a></li>
+            <li class="active"><a href="">Surfing</a></li>
+            <li><a href="">Clothing</a></li>
+            <li><a href="">Protection</a></li>
+            <li><a href="">Scuba Gear</a></li>
+            <li><a href="">Snorkeling Gear</a></li>
+            <li><a href="">Recreation</a></li>
+            <li><a href="">Water Recreation</a></li>
+            <li class="last"><a href="">Accessories</a></li>
           </ul>
         </div>
-        <!--END Navigation Bar--> 
+<!--END Product Navigation Bar-->
       </header>
     </div>
-    <div id="content">
+    <div id="pcontent">
       <h1>
         <script type="text/javascript">
           document.write('<img src="../assets/products/'+parameters[0]+'/product.png" alt="Product Image" />');
           document.write(parameters[0]);
-          
-
         </script> 
       </h1>
     </div>
+    
   </body>
 </html>
