So, it turns out that AccessDB only works on IE. And it doesn't support the new database types. I could migrate versions, but it only works on ie (ActiveX). Damn
* Link fixes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Broken Hill Surf Shop Online</title>
-    <link rel="shortcut icon" href="../assets/images/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Javascript code aka load database could go here! -->
     <style type="text/css">
       .wholepage {
@@ -52,6 +52,12 @@
           <p><a href="http://www.google.com/chrome"><img src="assets/images/badbrowser_assets/chrome.png" height="150" alt="Google Chrome logo" /></a></p>
         </div>
       </iframe>
+    </div>
+        <div id="footer">
+       <!--SITEMAP-->
+       <div>
+       </div>
+      <footer>© 2014 BearTech</footer>
     </div>
   </body>
 </html>
