--- a/site/404.html
+++ b/site/404.html
@@ -30,10 +30,15 @@
         <script type="text/javascript">
           if (document.referrer != "") {
           	document.write('<a href="javascript:history.back()">Click here to go back</a>');
-          	
           }
         </script> 
       </div>
+    </div>
+            <div id="footer">
+       <!--SITEMAP-->
+       <div>
+       </div>
+      <footer>© 2014 BearTech & Ryan Oo</footer>
     </div>
   </body>
 </html>
