--- a/site/home.html
+++ b/site/home.html
@@ -68,65 +68,19 @@
       </header>
     </div>
 	<div id="content">
-    	<h1>We've got all your surf needs</h1>
         <!--START Nivo Slider-->
         <div class="slider-wrapper ribbon">
         <div id="slider" class="nivoSlider"> <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" /> <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/> <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/> <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" /> <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> </div>
         <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. </div>
       </div>
       <!--END Nivo Slider--> 
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
+Top Products
+          </div>
     <div id="footer">
-      <footer> this is the footer </footer>
+       <!--SITEMAP-->
+       <div>
+       </div>
+      <footer>© 2014 BearTech & Ryan Oo</footer>
     </div>
   </body>
 </html>
