* Resize logo for scaling problems * I hate .DS_Store, why you do this mac. * Place holder image (draft) * Dynamic product page

--- a/site/404.html
+++ b/site/404.html
@@ -23,10 +23,10 @@
         <!--END Navigation Bar--> 
       </header>
     </div>
-    <div id="content">
+    <div id="four_oh_four_content">
       <div id="four_oh_four" class="four_oh_four">
         <hr>
-        <p><a href="home.html"> Return to the homepage</a></p>
+        <p><a href="home.html">Return to the homepage</a></p>
         <script type="text/javascript">
           if (document.referrer != "") {
           	document.write('<a href="javascript:history.back()">Click here to go back</a>');
