--- a/site/products.html
+++ b/site/products.html
@@ -8,13 +8,13 @@
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <script type="text/javascript">
-	  var productexists = false;
+	  var hasargs;
       var parameters = window.location.toString();
       if (parameters.indexOf("?") + 1 != 0) { //If there are parameters
-          parameters = parameters.substring(parameters.indexOf("?") + 1).split("&");
+          hasargs = true; 
+		  parameters = parameters.substring(parameters.indexOf("?") + 1).split("&");
           var img = new Image();
           img.onload = function () {
-		  productexists = true;
 		  }
 		  img.onerror = function () {
               console.log('Page not found! Redirecting...');
@@ -46,6 +46,7 @@
       
       } else {
           // Show product listing maybe?
+		  hasargs = false;
       }
     </script>
   </head>
@@ -114,7 +115,7 @@
       <footer>© 2014 Andrew Wong & Ryan Oo</footer>
     </div>
     <script>
-      if (productexists) {
+      if (hasargs) {
           document.getElementById('pcontent').style.display = "inherit";
 		  document.getElementById('productname').innerHTML=productinfo[0];
 		  document.getElementById('productdatabaseinfo_price').innerHTML=productinfo[1];
