- Remove "Click here to go back"

--- a/site/404.html
+++ b/site/404.html
@@ -27,11 +27,14 @@
       <div id="four_oh_four" class="four_oh_four">
         <hr>
         <p><a href="home.html">Return to the homepage</a></p>
+        
+		<!-- Well that didn't work, since it's not properly handling the 404 errors. Otherwise it will redirect back into a page that doesn't exist, unless load the 404 into the page. which I probably will..
         <script type="text/javascript">
           if (document.referrer != "") {
           	document.write('<a href="javascript:history.back()">Click here to go back</a>');
           }
         </script> 
+        -->
       </div>
     </div>
             <div id="footer">
