// It should work now, just need an "Add to Cart" or something

--- a/site/products.html
+++ b/site/products.html
@@ -87,11 +87,11 @@
     <div class="producttext">
           <div class="productinfo_upper"> 
         <!--Wrapper -->
-        <div id="productname">(Product Name)</div>
-        <div>Price: <span id="productdatabaseinfo_price"></span> <br>
-              Stock: <span id="productdatabaseinfo_stock"></span> </div>
+        <div id="productname">Product Name</div>
+        <div>Price: <span id="productdatabaseinfo_price">$$$</span> <br>
+              Stock: <span id="productdatabaseinfo_stock">Stock Amount</span> </div>
       </div>
-          <div id="productdescription">(Product Description)</div>
+          <div id="productdescription">Product Description</div>
         </div>
   </div>
     </div>
