* test to see if I need onload="finishload()"

--- a/site/products.html
+++ b/site/products.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
   <script src="../assets/js/main.js"></script>
 </head>
-
-<body onload="finishload()">
+<!-- onload="finishload()" -->
+<body>
   <!-- -->
   <!--Header (Logo) and Navigation Bar-->
   <div id="pheader">
