--- a/site/products.html
+++ b/site/products.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
   <script src="../assets/js/main.js"></script>
 </head>
-<!-- onload="finishload()" -->
-<body>
+<body onload="finishload()">
   <!-- -->
   <!--Header (Logo) and Navigation Bar-->
   <div id="pheader">
