* Code format * Forgot to remove the test stuff.

--- a/site/404.html
+++ b/site/404.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Broken Hill Surf Shop Online</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-  </head>
-  <body>
-    <!--Header (Logo) and Navigation Bar-->
-    <div id="header">
-      <header class="header">
-        <a href="home.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo"></a> 
-        <!--START Navigation Bar--> 
-        <!--Well on this page it isn't a navigation bar -->
-        <div id="navigation-bar">
-          <ul>
-            <li><a>What</a></li>
-            <li><a>Did</a></li>
-            <li><a>You</a></li>
-            <li class="last"><a>Do</a></li>
-          </ul>
-        </div>
-        <!--END Navigation Bar--> 
-      </header>
-    </div>
-    <div id="four_oh_four_content">
-      <div id="four_oh_four" class="four_oh_four">
-        <hr>
-        <p><a href="home.html">Return to the homepage</a></p>
-        
-		<!-- Well that didn't work, since it's not properly handling the 404 errors. Otherwise it will redirect back into a page that doesn't exist, unless load the 404 into the page. which I probably will..
+
+<head>
+  <title>Broken Hill Surf Shop Online</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+</head>
+
+<body>
+  <!--Header (Logo) and Navigation Bar-->
+  <div id="header">
+    <header class="header">
+      <a href="home.html">
+        <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo">
+      </a>
+      <!--START Navigation Bar-->
+      <!--Well on this page it isn't a navigation bar -->
+      <div id="navigation-bar">
+        <ul>
+          <li><a>What</a>
+          </li>
+          <li><a>Did</a>
+          </li>
+          <li><a>You</a>
+          </li>
+          <li class="last"><a>Do</a>
+          </li>
+        </ul>
+      </div>
+      <!--END Navigation Bar-->
+    </header>
+  </div>
+  <div id="four_oh_four_content">
+    <div id="four_oh_four" class="four_oh_four">
+      <hr>
+      <p><a href="home.html">Return to the homepage</a>
+      </p>
+
+      <!-- Well that didn't work, since it's not properly handling the 404 errors. Otherwise it will redirect back into a page that doesn't exist, unless load the 404 into the page. which I probably will..
         <script type="text/javascript">
           if (document.referrer != "") {
           	document.write('<a href="javascript:history.back()">Click here to go back</a>');
           }
         </script> 
         -->
-      </div>
     </div>
-            <div id="footer">
-       <!--SITEMAP-->
-       <div>
-       </div>
-      <footer>© 2014 BearTech & Ryan Oo</footer>
+  </div>
+  <div id="footer">
+    <!--SITEMAP-->
+    <div>
     </div>
-  </body>
+    <footer>© 2014 BearTech & Ryan Oo</footer>
+  </div>
+</body>
+
 </html>
