--- a/site/home.html
+++ b/site/home.html
@@ -1,86 +1,101 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Broken Hill Surf Shop Online</title>
-    <link rel="shortcut icon" href="../assets/images/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <!--jQuery -->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript" ></script>
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <title>Broken Hill Surf Shop Online</title>
+  <link rel="shortcut icon" href="../assets/images/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+  <!--jQuery -->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+  <!--
       Nivo Slider
       http://docs.dev7studios.com/jquery-plugins/nivo-slider
       -->
-    <link rel="stylesheet" href="../assets/css/nivo-slider.css" type="text/css" />
-    <link rel="stylesheet" href="../assets/css/nivo-slider-theme.css" type="text/css" />
-    <script src="../assets/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      $(window).load(function() {
-        $('#slider').nivoSlider(
-      {
-            controlNav: false,
-            pauseOnHover: true,
-            pauseTime: 8000});
-          }
-      );
-    </script>
-  </head>
-  <body>
-    <!--Header (Logo) and Navigation Bar-->
-    <div id="header">
-      <header class="header headergradient">
-        <a href="home.html"><img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /></a> 
-        <!--START Navigation Bar-->
-        <div id="navigation-bar">
-          <ul>
-            <li class="active"><a href="home.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="last"><a href="#news">News</a></li>
-          </ul>
-        </div>
-        <!--END Navigation Bar--> 
-      </header>
-    </div>
-	<div id="content">
-        <!--START Nivo Slider-->
-        <div class="slider-wrapper ribbon">
-        <div id="slider" class="nivoSlider"> <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" /> <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2"/> <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3"/> <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" /> <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption"/> </div>
-        <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. </div>
+  <link rel="stylesheet" href="../assets/css/nivo-slider.css" type="text/css" />
+  <link rel="stylesheet" href="../assets/css/nivo-slider-theme.css" type="text/css" />
+  <script src="../assets/js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    $(window).load(function () {
+      $('#slider').nivoSlider({
+        controlNav: false,
+        pauseOnHover: true,
+        pauseTime: 8000
+      });
+    });
+  </script>
+</head>
+
+<body>
+  <!--Header (Logo) and Navigation Bar-->
+  <div id="header">
+    <header class="header headergradient">
+      <a href="home.html">
+        <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" />
+      </a>
+      <!--START Navigation Bar-->
+      <div id="navigation-bar">
+        <ul>
+          <li class="active"><a href="home.html">Home</a>
+          </li>
+          <li><a href="products.html">Products</a>
+          </li>
+          <li><a href="#about">About</a>
+          </li>
+          <li><a href="#contact">Contact</a>
+          </li>
+          <li class="last"><a href="#news">News</a>
+          </li>
+        </ul>
       </div>
-      <!--END Nivo Slider--> 
-Top Products
-          </div>
-    <div id="footer">
-       <!--SITEMAP-->
-       <div>
-       </div>
-      <footer>© 2014 BearTech & Ryan Oo</footer>
+      <!--END Navigation Bar-->
+    </header>
+  </div>
+  <div id="content">
+    <!--START Nivo Slider-->
+    <div class="slider-wrapper ribbon">
+      <div id="slider" class="nivoSlider">
+        <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
+        <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" />
+        <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" />
+        <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
+        <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption" />
+      </div>
+      <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.</div>
     </div>
-  </body>
+    <!--END Nivo Slider-->
+    Top Products
+  </div>
+  <div id="footer">
+    <!--SITEMAP-->
+    <div>
+    </div>
+    <footer>© 2014 Andrew Wong & Ryan Oo</footer>
+  </div>
+</body>
+
 </html>
