* Update footer text

--- a/site/404.html
+++ b/site/404.html
@@ -50,7 +50,7 @@
     <!--SITEMAP-->
     <div>
     </div>
-    <footer>© 2014 BearTech & Ryan Oo</footer>
+    <footer>© 2014 Andrew Wong & Ryan Oo</footer>
   </div>
 </body>
 
