--- a/site/products.html
+++ b/site/products.html
@@ -9,6 +9,7 @@
   <script src="../assets/js/main.js"></script>
   <script>
     var hasargs;
+	var productvalid = false;
     var productinfo;
     var parameters = window.location.toString();
     beginload();
