* Reflect page creation

--- a/site/home.html
+++ b/site/home.html
@@ -64,11 +64,11 @@
           </li>
           <li><a href="products.html">Products</a>
           </li>
-          <li><a href="#about">About</a>
+          <li><a href="about.html">About</a>
           </li>
-          <li><a href="#contact">Contact</a>
+          <li><a href="contact.html">Contact</a>
           </li>
-          <li class="last"><a href="#news">News</a>
+          <li class="last"><a href="news.html">News</a>
           </li>
         </ul>
       </div>
