--- a/site/products.html
+++ b/site/products.html
@@ -35,11 +35,11 @@
             </li>
             <li class="active"><a href="products.html">Products</a> 
             </li>
-            <li><a href="#about">About</a> 
+            <li><a href="about.html">About</a> 
             </li>
-            <li><a href="#contact">Contact</a> 
+            <li><a href="contact.html">Contact</a> 
             </li>
-            <li class="last"><a href="#news">News</a> 
+            <li class="last"><a href="news.html">News</a> 
             </li>
           </ul>
         </div>
