--- a/site/products.html
+++ b/site/products.html
@@ -19,7 +19,7 @@
   </script>
   </head>
 
-  <body onLoad="replace();">
+  <body onLoad="replace();$("#productbarcode").barcode(parameters[0], "code128");">
   <div id="container"> 
     <!-- --> 
     <!--Header (Logo) and Navigation Bar-->
